sort lb and fix lb cut off

--- a/oct/frontend/src/assets/css/achievements/completion.css
+++ b/oct/frontend/src/assets/css/achievements/completion.css
@@ -265,7 +265,7 @@ p {
   text-align: center;
 }
 
-@media (max-width: 900px) {
+@media (max-width: 1250px) {
   .page-container {
     flex-direction: column;
   }
